--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -1,7 +1,8 @@
-{"page":1,"per_page":3,"total":12,"total_pages":4,"data":[{
+{
+  "data": [{
 
       "id": 1,
-      "name": "breville",
+      "name": "Breville",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "10",
@@ -17,25 +18,8 @@
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13797#page/1"
     },
     {
-      "id": 2,
-      "name": "coldSteel",
-      "goal": "Brand awareness, product seeding",
-      "type": "brand/product e-learning",
-      "length": "6",
-      "writer": "Seth Merrill",
-      "description": "We dare you to find a knife brand more bold than Cold Steel and a personality more electric than its founder, Lynn Thompson. If you've heard of Cold Steel, you probably know about their zany, viral, apocalyptic testing videos — Experticity shows you the motivation behind the madness with an exclusive look at the technology and inspiration that makes Cold Steel some of the strongest, safest knives on the market. This experience includes:<ul><li>An interactive 'Week in the Life' calendar of Cold Steel founder Lynn Thompson's rigorous training schedule, establishing his expert credentials</li><li>A visual dissection of the four unique features of Cold Steel's famous Tri-Ad Lock</li><li>A Lynn Thompson Q&A with questions sourced from the Experticity community</li><li>Featured product tool tips, flip cards and a ton more</li></ul>",
-      "logo": "src/assets/clients/coldSteel/coldSteel-logo.png",
-      "header": "",
-      "preview": "src/assets/clients/coldSteel/coldSteel-preview-image.jpg",
-      "budget": "13,900",
-      "scope": "1 module",
-      "stakeholder": "Lynn Thompson, President and CEO",
-      "liveLink": "https://www.experticity.com/learn/preview?moduleId=13757#page/1"
-
-    },
-    {
       "id": 3,
-      "name": "dakine",
+      "name": "Dakine",
       "goal": "Brand awareness, product seeding",
       "type": "product e-learning",
       "writer": "Seth Merrill",
@@ -48,11 +32,10 @@
       "scope": "2 modules",
       "stakeholder": "Madeline Eastman, Ecommerce Marketing Manager",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13616#page/1"
-
     },
     {
       "id": 4,
-      "name": "europharma",
+      "name": "Europharma",
       "goal": "Product Launch",
       "type": "Marketing",
       "writer": "Taylor Anderson",
@@ -65,11 +48,10 @@
       "scope": "4 modules",
       "stakeholder": "Terry Lemmerond, Founder and CEO",
       "liveLink": "https://expertvoice.us16.list-manage.com/track/click?u=d1c71f0834f27e618286f705e&id=401379448a&e=76a3716150"
-
     },
     {
       "id": 5,
-      "name": "goalZero",
+      "name": "Goal Zero",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "5",
@@ -82,11 +64,10 @@
       "scope": "1 module",
       "stakeholder": "Nick Mathis, Key Account Manager",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13605#page/1"
-
     },
     {
       "id": 6,
-      "name": "greenPan",
+      "name": "Green Pan",
       "type": "product/quiz e-learning",
       "length": "6",
       "writer": "Seth Merrill & Colin Santos",
@@ -95,16 +76,15 @@
       "header": "",
       "preview": "src/assets/clients/greenPan/greenPan-preview-image.jpg",
       "budget": "5000",
-      "responsibilities": "I was responsible for the site design, from brainstorm to build, through wireframing and interaction development. This update in particular featured 2 bespoke quizzes; the former, a game of creating a <em>green</em> meal, the latter (and the one linked to that preview button) is an experience designed to rate a users aptitude for GreenPan care and use. Our brand partners told us that was a big problem they were having, so we designed and delivered an experience that gave feedback for answers both correct and incorrect. It also gave them one of 5 unique ratings, for gamification. The design of this module fulfilled all the external goals of our parters, but also met many internal goals. With this we reset the expectation of what an edu-game could be, established new best practices of reinforcement and gamification.",
+      "responsibilities": "I was responsible for the site design, from brainstorm to build, through wireframing and interaction development. This update in particular featured 2 bespoke quizzes; the former, a game of creating a <em>green</em> meal, the latter (and the one linked to that preview button) is an experience designed to rate a users aptitude for GreenPan care and use. Our brand partners told us that was a big problem they were having, so we designed and delivered an experience that gave feedback for answers both correct and incorrect. It also gave them one of 5 unique ratings, for gamification. The design of this site fulfilled all the external goals of our parters, but also met many internal goals for content development. With this we reset the expectation of what an edu-game could be, established new best practices of reinforcement and gamification.",
       "scope": "2 modules",
       "stakeholder": "Tabitha Luckett, Sales Director",
       "video": "src/assets/clients/greenPan/greenPan-recording.mp4",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13275#page/1"
-
     },
     {
       "id": 7,
-      "name": "hills",
+      "name": "Hill's Pet Nutrition",
       "goal": "Category education",
       "type": "product e-learning",
       "length": "65",
@@ -121,7 +101,7 @@
     },
     {
       "id": 8,
-      "name": "hydroflask",
+      "name": "Hydro Flask",
       "goal": "Brand awareness, product seeding",
       "type": "Tech/Products e-learning",
       "length": "6",
@@ -137,42 +117,8 @@
       "liveLink": "https://www.experticity.com/learn?moduleId=14194&courseId=8645&campaignId=4805#page/1"
     },
     {
-      "id": 9,
-      "name": "jackWolfskin",
-      "goal": "Brand awareness, product seeding",
-      "type": "brand/product e-learning",
-      "length": "3",
-      "writer": "Matthew Nanes",
-      "description": "Jack Wolfskin is a household brand in Europe, recognized for its reputation by innovative German design and engineering and a commitment to environmentally friendly production. This project was a 1000 engagement test to see how much product they could seed to experts, that ultimately failed... there were a number of contributing factors behind the it's lack of success. Not to deflect, but they were all out of my hands. The client was satisfied with the content. Dissatisfied with the platform.",
-      "logo": "src/assets/clients/jackWolfskin/jackWolfskin-logo.png",
-      "header": "",
-      "preview": "src/assets/clients/jackWolfskin/jackWolfskin-preview-image.jpg",
-      "budget": "26,500",
-      "scope": "",
-      "stakeholder": "",
-      "liveLink": "https://www.experticity.com/learn/preview?moduleId=13793#page/1"
-
-    },
-    {
-      "id": 10,
-      "name": "kammok",
-      "goal": "Brand awareness, product seeding",
-      "type": "brand/product e-learning",
-      "length": "5",
-      "writer": "Jenna Anderson",
-      "description": "When we heard that we were going to be working with Kammok, we couldn’t wait to take their hammocks out. Kammok designs for the outdoor gearhead who wants the best and needs great performance.",
-      "logo": "src/assets/clients/kammok/kammok-logo.png",
-      "header": "",
-      "preview": "src/assets/clients/kammok/kammok-preview-image.jpg",
-      "budget": "34,318",
-      "scope": "",
-      "stakeholder": "",
-      "liveLink": "https://www.experticity.com/learn/preview?moduleId=13443#page/1"
-
-    },
-    {
       "id": 11,
-      "name": "lander",
+      "name": "Lander",
       "goal": "Brand awareness, product seeding",
       "type": "product e-learning",
       "length": "10",
@@ -190,24 +136,24 @@
     },
     {
       "id": 12,
-      "name": "MDT",
+      "name": "Teva",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "5",
-      "writer": "Matthew Nanes",
-      "description": "Brand provided videos, we fit it in to a story arc and introduced their new product.",
-      "logo": "src/assets/clients/MDT/MDT-logo.png",
-      "header": "src/assets/clients/MDT/MDT-header.jpg",
-      "preview": "src/assets/clients/MDT/MDT-preview-image.jpg",
-      "budget": "7,500",
+      "writer": "Jenna Anderson",
+      "description": "Teva was celebrating the 100th anniversary of the Grand Canyon being a national park, they wanted to educate all their influencers about the significance of the canyon and showcase their new line of products.",
+      "logo": "",
+      "header": "",
+      "preview": "",
+      "budget": "",
       "scope": "",
       "quote": "",
-      "stakeholder": "Bob Fugger, Marketing Driector",
+      "stakeholder": "",
       "liveLink": "XXX"
     },
     {
       "id": 13,
-      "name": "nightforce",
+      "name": "Nightforce",
       "type": "brand/product e-learning",
       "length": "3",
       "writer": "Coy Whittier",
@@ -224,7 +170,7 @@
     },
     {
       "id": 14,
-      "name": "oakley",
+      "name": "Oakley",
       "type": "brand/product e-learning",
       "goal": "Brand awareness, Product education",
       "length": "75",
@@ -240,7 +186,7 @@
     },
     {
       "id": 15,
-      "name": "sawyer",
+      "name": "Sawyer",
       "type": "product e-learning",
       "length": "17",
       "writer": "Jenna Anderson",
@@ -254,45 +200,30 @@
       "scope": "3 modules",
       "stakeholder": "",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13848#page/1"
-
-    },
-    {
-      "id": 16,
-      "name": "smith",
-      "goal": "Brand awareness, product seeding",
-      "type": "brand/product/tech e-learning",
-      "length": "15",
-      "writer": "Sam Flickinger",
-      "description": "Get the three-minute-or-less lowdown on the new tech-laden sunglasses from Smith: Lowdown Focus.",
-      "logo": "src/assets/clients/smith/smith-logo.png",
-      "header": "",
-      "preview": "src/assets/clients/smith/smith-preview-image.jpg",
-      "budget": "118,035",
-      "scope": "3 modules",
-      "stakeholder": "",
-      "liveLink": "https://www.experticity.com/learn?moduleId=14266&courseId=8642&campaignId=4768#page/1"
-
     },
     {
       "id": 17,
-      "name": "sportDog",
+      "name": "Descente",
       "type": "brand/product e-learning",
       "goal": "Brand awareness, product seeding",
-      "length": "20",
-      "writer": "Jenna Anderson & Coy Whittier",
-      "description": "SportDOG has undergone a much-needed overhaul with the goal of changing people’s minds about training collars. We spoke with Josh Miller, a long-time SportDOG employee, professional dog trainer, and a man who is not afraid to open up about his emotional journey with his own dog (Easton) that led him to be so passionate about what he does.You will also find:<ul><li>Comprehensive product overview of Training, Tracking and Containment products in a sleek, new article-style design</li><li>Quotes from our interview with Josh Miller</li><li>A look at the new TEK 2.0 GPS-tracking system</li></ul>",
-      "logo": "src/assets/clients/sportDog/sportDog-logo.png",
+      "length": "",
+      "writer": "Seth Merrill",
+      "description": "Explore an all-new content experience from Descente, makers of the types of jackets you'll be skiing with for years, if not decades. Why is that? Because their jackets are just made better. In this lesson, you'll have a chance to:
+      Explore how Descente 's Japanese heritage and focus on premium sets them apart from competitors
+      Take a deep dive into finding the perfect premium jacket with tips,
+      insights and knowledge from Descente product manager Brook Barney( in an ExpertVoice - exclusive interview)
+      Look at a few Descente featured products ",
+      "logo": "",
       "header": "",
-      "preview": "src/assets/clients/sportDog/sportDog-preview-image.jpg",
-      "budget": "48,700",
-      "scope": "4 modules",
-      "stakeholder": "Britney Starr, Marketing Specialist",
-      "liveLink": "https://www.experticity.com/learn/preview?moduleId=13691#page/1"
-
+      "preview": "",
+      "budget": "",
+      "scope": "",
+      "stakeholder": "Patrick Purcell, Marketing Manager – USA",
+      "liveLink": ""
     },
     {
       "id": 18,
-      "name": "toms",
+      "name": "TOMS",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "25",
@@ -305,11 +236,10 @@
       "scope": "5 modules",
       "stakeholder": "Chad Lavachek, Retail Marketing Manage",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13866#page/1"
-
     },
     {
       "id": 19,
-      "name": "timbuk2",
+      "name": "Timbuk2",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "10",
@@ -326,7 +256,7 @@
     },
     {
       "id": 20,
-      "name": "voodoo",
+      "name": "Voodoo Ride",
       "goal": "Brand awareness, product seeding",
       "type": "brand/product e-learning",
       "length": "20",
@@ -342,7 +272,7 @@
     },
     {
       "id": 21,
-      "name": "zeal",
+      "name": "Zeal Optics",
       "goal": "Brand awareness, product seeding",
       "type": "product/tech e-learning",
       "length": "8",
@@ -359,7 +289,7 @@
     },
     {
       "id": 22,
-      "name": "campusMarket",
+      "name": "Campus Market",
       "type": "Product/Service",
       "length": "",
       "description": "This is a joint venture between a few friends and I. It is basically a replacement for craigslist geared specifically towards university students. Users of our site avoid the spam and the privacy concerns, not to mention the archaic UX, that Craigslist is widely known for.",
