json fixed, and data renamed. a few missing links fixed.

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -8,10 +8,10 @@
       "length": "10",
       "writer": "Matthew Nanes",
       "description": "Breville’s Oracle® Touch makes premium, automatic, café-quality espresso. In these new modules, we take a deep dive on Breville’s “super-automatic” espresso machine alongside Breville’s coffee master Alejandra Lin. Better yet, we even threw a coffee social hosted by Alejandra and Experticity to test out the Oracle® Touch to coffee fanatics. What happens? You’re going to have to take the lessons to find out.",
-      "logo": "src/assets/clients/breville/breville-logo.png",
+      "logo": "assets/clients/breville/breville-logo.png",
       "header": "https://cdn.experticity.com/contrib/mfg/breville/contrib/images/MODULE-13796-coffee-beans-bg-color.jpg",
-      "preview": "src/assets/clients/breville/breville-preview-image.jpg",
-      "video": "src/assets/clients/breville/breville-recording.mp4",
+      "preview": "assets/clients/breville/breville-preview-image.jpg",
+      "video": "assets/clients/breville/breville-recording.mp4",
       "budget": "20,000",
       "scope": "3 modules",
       "stakeholder": "Clifford Torng, Global Go-to-Market Officer",
@@ -25,9 +25,9 @@
       "writer": "Seth Merrill",
       "length": "10",
       "description": "With its home base in Hood River, Oregon, Dakine has access to snowy slopes (and the athletes that ride them) nearly year round. This gives its designers a constant stream of product testers to tap for inspiration and feedback. What does that mean for the customer? Products that aren’t created in a lab, but on the slopes.We talked to two Dakine designers to get their insights and stories behind this season’s snow bibs and backpacks.",
-      "logo": "src/assets/clients/dakine/dakine-logo.png",
+      "logo": "assets/clients/dakine/dakine-logo.png",
       "header": "",
-      "preview": "src/assets/clients/dakine/dakine-preview-image.jpg",
+      "preview": "assets/clients/dakine/dakine-preview-image.jpg",
       "budget": "7,500",
       "scope": "2 modules",
       "stakeholder": "Madeline Eastman, Ecommerce Marketing Manager",
@@ -41,9 +41,9 @@
       "writer": "Taylor Anderson",
       "length": "20",
       "description": "Terry Naturally wanted to educate retailers about their complex, science-backed products so they can pass that knowledge on to customers. The new content features:<ul><li>Custom, in-studio video.</li><li>An interview with Naturals legend, Terry Lemerond.</li><li>Interactive features to keep experts engaged throughout the science-based content.</li></ul>",
-      "logo": "src/assets/clients/dakine/dakine-logo.png",
+      "logo": "assets/clients/dakine/dakine-logo.png",
       "header": "",
-      "preview": "src/assets/clients/dakine/dakine-preview-image.jpg",
+      "preview": "assets/clients/dakine/dakine-preview-image.jpg",
       "budget": "7,500",
       "scope": "4 modules",
       "stakeholder": "Terry Lemmerond, Founder and CEO",
@@ -57,9 +57,9 @@
       "length": "5",
       "writer": "Jenna Anderson",
       "description": "Goal Zero began in 2007 with Robert Workman teaching villagers how to run a sustainable business in their communities and empowering them to lift themselves out of poverty. Today Goal Zero strives to put reliable power in the hands of every human on earth.We created a series of digital experiences to educate our audience about products, new and old– to help them better fit customer need with their recommendations.",
-      "logo": "src/assets/clients/goalZero/goalZero-logo.png",
+      "logo": "assets/clients/goalZero/goalZero-logo.png",
       "header": "",
-      "preview": "src/assets/clients/goalZero/goalZero-preview-image.jpg",
+      "preview": "assets/clients/goalZero/goalZero-preview-image.jpg",
       "budget": "5,600",
       "scope": "1 module",
       "stakeholder": "Nick Mathis, Key Account Manager",
@@ -72,14 +72,14 @@
       "length": "6",
       "writer": "Seth Merrill & Colin Santos",
       "description": "The one that got away... Greenpan was a labor of love, a passion project for all involved. They make technical, non-stick cookware and had very specific concerns they wanted addressed. We created 2 innovative pieces of micro-content: a buzzfeed-esque quiz, and a narrative story. I wont <em>mince</em> words they were awesome and ground-breaking, when compared to the other work we were doing. Our brand partners loved them, but had to cancel their program with Experticity due to budget cuts at their parent company.",
-      "logo": "src/assets/clients/greenPan/greenPan/greenPan-logo.png",
+      "logo": "assets/clients/greenPan/greenPan-logo.png",
       "header": "",
-      "preview": "src/assets/clients/greenPan/greenPan-preview-image.jpg",
+      "preview": "assets/clients/greenPan/greenPan-preview-image.jpg",
       "budget": "5000",
       "responsibilities": "I was responsible for the site design, from brainstorm to build, through wireframing and interaction development. This update in particular featured 2 bespoke quizzes; the former, a game of creating a <em>green</em> meal, the latter (and the one linked to that preview button) is an experience designed to rate a users aptitude for GreenPan care and use. Our brand partners told us that was a big problem they were having, so we designed and delivered an experience that gave feedback for answers both correct and incorrect. It also gave them one of 5 unique ratings, for gamification. The design of this site fulfilled all the external goals of our parters, but also met many internal goals for content development. With this we reset the expectation of what an edu-game could be, established new best practices of reinforcement and gamification.",
       "scope": "2 modules",
       "stakeholder": "Tabitha Luckett, Sales Director",
-      "video": "src/assets/clients/greenPan/greenPan-recording.mp4",
+      "video": "assets/clients/greenPan/greenPan-recording.mp4",
       "liveLink": "https://www.experticity.com/learn/preview?moduleId=13275#page/1"
     },
     {
@@ -92,11 +92,11 @@
       "description": "Hill's started as a three minute, one-product module and grew into one of ExpertVoice's most valued brand partnerships. They LOVE the content we created for them. We made standard content, micro content, video content, live video content, published surveys, and redesigned the E-Commerce experience for their unique content incentives.",
       "logo": "XXX",
       "header": "XXX",
-      "preview": "src/assets/clients/hills/hills-preview-image.jpg",
+      "preview": "assets/clients/hills/hills-preview-image.jpg",
       "budget": "609,148",
       "scope": "45 modules",
       "stakeholder": "Christina Savignano, Education Team Leader",
-      "video": "src/assets/clients/hills/hills-recording.mp4",
+      "video": "assets/clients/hills/hills-recording.mp4",
       "liveLink": "https://www.experticity.com/learn?moduleId=14333&courseId=8702&campaignId=4876"
     },
     {
@@ -107,9 +107,9 @@
       "length": "6",
       "writer": "Seth Merrill, Jenn Olsen",
       "description": "I inherited this project after 2 sites had already been built, we had missed the mark. I was in charge of rebuilding both sites and fixing the client relationship. What I created was more in line with what the client wanted originally and the only edits we had to make were adding 8413651864 icons. A big brand for ExpertVoice, not much contract value, because the bulk of our revenue was made in order commission.",
-      "logo": "src/assets/clients/hydroflask/hydroflask-logo.png",
+      "logo": "assets/clients/hydroflask/hydroflask-logo.png",
       "header": "",
-      "preview": "src/assets/clients/hydroflask/hydroflask-preview-image.jpg",
+      "preview": "assets/clients/hydroflask/hydroflask-preview-image.jpg",
       "budget": "4,500",
       "responsibilities": "generic",
       "stakeholder": "Nazera Carlson, Retail Marketing Specialist",
@@ -124,10 +124,10 @@
       "length": "10",
       "writer": "Kaylee Hahn",
       "description": "Lander was releasing its first REI exclusive product, the Cairn, and we spoke to a designer to get the scoop on some of its most interesting features. In this experience, you'll find more information about this game-changing lantern, as well as:<ul><li>An introduction to the Lander product ecosystem</li><li>A deeper dive into key Lander technologies, including Thermoline</li><li>Insights from the brand about how these products were created, named, and tested</li></ul>",
-      "logo": "src/assets/clients/lander/lander-logo.png",
+      "logo": "assets/clients/lander/lander-logo.png",
       "header": "https://cdn.experticity.com/contrib/mfg/lander/contrib/images/MODULE-13704-cairn-breaker-2.jpg",
-      "preview": "src/assets/clients/lander/lander-preview-image.jpg",
-      "video": "src/assets/clients/lander/lander-recording.mp4",
+      "preview": "assets/clients/lander/lander-preview-image.jpg",
+      "video": "assets/clients/lander/lander-recording.mp4",
       "budget": "14,700",
       "scope": "2 modules",
       "stakeholder": "Evan Miller, Channel Marketing Manager",
@@ -158,9 +158,9 @@
       "length": "3",
       "writer": "Coy Whittier",
       "description": "Prior to the release of two new Nightforce products, Wayne got in contact with us about building some content. These products were a departure from what the brand was known for and they wanted to make sure that the advantages of their product would sell better than their competition in this crowded short-range optics market.",
-      "logo": "src/assets/clients/nightforce/nightforce-logo.png",
-      "header": "src/assets/clients/nightforce/nightforce-header.jpg",
-      "preview": "src/assets/clients/nightforce/nightforce-preview-image.jpg",
+      "logo": "assets/clients/nightforce/nightforce-logo.png",
+      "header": "assets/clients/nightforce/nightforce-header.jpg",
+      "preview": "assets/clients/nightforce/nightforce-preview-image.jpg",
       "budget": "29,200",
       "goal": "Brand awareness, product seeding",
       "scope": "Content Update/Overhaul",
@@ -176,9 +176,9 @@
       "length": "75",
       "writer": "Jenna Anderson, Sam Flickinger",
       "description": "Before they cancelled they were ExpertVoice's highest profile, and higest paying client. Sadly they did cancel their contract due to the brand being rebased and more wholly absorbed by their parent, The Luxottica Group.",
-      "logo": "src/assets/clients/oakley/oakley-logo.png",
-      "header": "src/assets/clients/oakley/oakley-header.jpg",
-      "preview": "src/assets/clients/oakley/oakley-preview-image.jpg",
+      "logo": "assets/clients/oakley/oakley-logo.png",
+      "header": "assets/clients/oakley/oakley-header.jpg",
+      "preview": "assets/clients/oakley/oakley-preview-image.jpg",
       "budget": "258,800",
       "scope": "15 modules",
       "stakeholder": "Mya Maury, Global Product Training and Development Manager",
@@ -191,11 +191,11 @@
       "length": "17",
       "writer": "Jenna Anderson",
       "description": "Sawyer’s new Select Filters and Purifiers use a proprietary foam adsorption technology that is changing the game in water filtration.We created a new piece of micro-content showcasing their newest product line.",
-      "logo": "src/assets/clients/sawyer/sawyer-logo.png",
+      "logo": "assets/clients/sawyer/sawyer-logo.png",
       "goal": "Brand awareness, product seeding",
       "header": "",
-      "preview": "src/assets/clients/sawyer/sawyer-preview-image.jpg",
-      "video": "src/assets/clients/sawyer/sawyer-recording.mp4",
+      "preview": "assets/clients/sawyer/sawyer-preview-image.jpg",
+      "video": "assets/clients/sawyer/sawyer-recording.mp4",
       "budget": "31,540",
       "scope": "3 modules",
       "stakeholder": "",
@@ -208,11 +208,7 @@
       "goal": "Brand awareness, product seeding",
       "length": "",
       "writer": "Seth Merrill",
-      "description": "Explore an all-new content experience from Descente, makers of the types of jackets you'll be skiing with for years, if not decades. Why is that? Because their jackets are just made better. In this lesson, you'll have a chance to:
-      Explore how Descente 's Japanese heritage and focus on premium sets them apart from competitors
-      Take a deep dive into finding the perfect premium jacket with tips,
-      insights and knowledge from Descente product manager Brook Barney( in an ExpertVoice - exclusive interview)
-      Look at a few Descente featured products ",
+      "description": "",
       "logo": "",
       "header": "",
       "preview": "",
@@ -229,9 +225,9 @@
       "length": "25",
       "writer": "Alex Nygaard",
       "description": "The one for one charity model started here. We sat down with many people inside the TOMS brand, from CEO, to founder, to product designers. We got the inside scoop and served it up for our experts to consume.",
-      "logo": "src/assets/clients/toms/toms-logo.png",
+      "logo": "assets/clients/toms/toms-logo.png",
       "header": "",
-      "preview": "src/assets/clients/toms/toms-preview-image.jpg",
+      "preview": "assets/clients/toms/toms-preview-image.jpg",
       "budget": "130,736",
       "scope": "5 modules",
       "stakeholder": "Chad Lavachek, Retail Marketing Manage",
@@ -245,9 +241,9 @@
       "length": "10",
       "writer": "Alex Nygaard",
       "description": "Light, nimble and fearless, the gears are always turning at Timbuk2 to dream up stylish solutions for the digital nomad. For nearly three decades the brand has shaped urban style and tech-forward fashion from its home base in San Francisco.",
-      "logo": "src/assets/clients/timbuk2/timbuk2-logo.png",
+      "logo": "assets/clients/timbuk2/timbuk2-logo.png",
       "header": "",
-      "preview": "src/assets/clients/timbuk2/timbuk2-preview-image.jpg",
+      "preview": "assets/clients/timbuk2/timbuk2-preview-image.jpg",
       "budget": "12,250",
       "scope": "2 modules",
       "stakeholder": "FPO",
@@ -262,9 +258,9 @@
       "length": "20",
       "writer": "Alex Nygaard",
       "description": "Description Needed FPO",
-      "logo": "src/assets/clients/voodoo/voodoo-logo.png",
+      "logo": "assets/clients/voodoo/voodoo-logo.png",
       "header": "",
-      "preview": "src/assets/clients/voodoo/voodoo-preview-image.jpg",
+      "preview": "assets/clients/voodoo/voodoo-preview-image.jpg",
       "budget": "36,200",
       "scope": "4 modules",
       "stakeholder": "Scott Webb, President and CEO",
@@ -278,9 +274,9 @@
       "length": "8",
       "writer": "Seth Merrill",
       "description": "In this overhaul we set Zeal Optics up for a more focused, seasonally-relevant approach. For this coming winter season, members will be reminded of what Zeal Optics stands for, as well as learn about the latest goggles and goggle technologies.",
-      "logo": "src/assets/clients/zeal/zeal-logo.png",
+      "logo": "assets/clients/zeal/zeal-logo.png",
       "header": "",
-      "preview": "src/assets/clients/zeal/zeal-preview-image.jpg",
+      "preview": "assets/clients/zeal/zeal-preview-image.jpg",
       "budget": "28,900",
       "scope": "2 modules",
       "stakeholder": "Mike Lewis, Director of Brand Activation & Digital Strategy",
@@ -294,9 +290,9 @@
       "length": "",
       "description": "This is a joint venture between a few friends and I. It is basically a replacement for craigslist geared specifically towards university students. Users of our site avoid the spam and the privacy concerns, not to mention the archaic UX, that Craigslist is widely known for.",
       "responsibilities": "I own all user experience aspects of this site. It started as wireframes, moved to high fidelity mocks, where we tested, the I built and styled all the components in angular 6. My cofounders handled the data architecture and the integrations with other sites, as well as security – but the design was all me.",
-      "logo": "src/assets/clients/campusmarket/campusmarket-logo.png",
+      "logo": "assets/clients/campusmarket/campusmarket-logo.png",
       "header": "",
-      "preview": "src/assets/clients/campusmarket/campusmarket-preview.jpeg",
+      "preview": "assets/clients/campusmarket/campusmarket-preview.jpeg",
       "budget": "",
       "scope": "Won first place in the Miller Competition Series @ Brigham Young University, Entrepreneurship & Technology mobile app compentition.",
       "liveLink": "https://thecampus.market"
