--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -149,7 +149,7 @@
       "scope": "",
       "quote": "",
       "stakeholder": "",
-      "liveLink": "XXX"
+      "liveLink": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15351%26campaignId%3D5688"
     },
     {
       "id": 13,
