removed the videos from the proj. updated lander to pull locally

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -303,9 +303,8 @@
       "writer": "Kaylee Hahn",
       "description": "Lander was releasing its first REI exclusive product, the Cairn, and we spoke to a designer to get the scoop on some of its most interesting features. In this experience, you'll find more information about this game-changing lantern, as well as:<ul><li>An introduction to the Lander product ecosystem</li><li>A deeper dive into key Lander technologies, including Thermoline</li><li>Insights from the brand about how these products were created, named, and tested</li></ul>",
       "logo": "assets/clients/lander/lander-logo.png",
-      "header": "https://cdn.experticity.com/contrib/mfg/lander/contrib/images/MODULE-13704-cairn-breaker-2.jpg",
-      "preview": "assets/clients/lander/lander-preview-image.jpg",
-      "video": "assets/clients/lander/lander-recording.mp4",
+      "header": "assets/clients/lander/lander-tile.jpg",
+      "preview": "assets/clients/lander/lander-preview.jpg",
       "budget": "14,700",
       "scope": "2 modules",
       "stakeholder": "Evan Miller, Channel Marketing Manager",
